--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
 </body>
 
 <script>
-    System.import('Engine/Build/Test/AudioTest');
+    System.import('./Engine/Build/Test/main');
 </script>
 </html>
