--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </body>
 
 <script>
+    System.import('./Engine/Build/Test/ProfilerTest');
     System.import('./Engine/Build/Test/main');
 </script>
 </html>
