--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 </body>
 
 <script>
-    System.import('./Engine/Build/Test/ProfilerTest');
-    System.import('./Engine/Build/Test/main');
+    //System.import('./Engine/Build/Test/ProfilerTest');
+    //System.import('./Engine/Build/Test/main');
+    System.import('./Engine/Build/Runtime/Framework/Trigger/Trigger');
 </script>
 </html>
