--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <script>
     //System.import('./Engine/Build/Test/ProfilerTest');
-    //System.import('./Engine/Build/Test/main');
-    System.import('./Engine/Build/Runtime/Framework/Trigger/Trigger');
+    System.import('./Engine/Build/Test/main');
+    //System.import('./Engine/Build/Runtime/Framework/Trigger/Trigger');
 </script>
 </html>
