--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <script src="./node_modules/es6-module-loader/dist/es6-module-loader.src.js"></script>
     <script src="./node_modules/systemjs/dist/system.src.js"></script>
     <script src="./config.js"></script>
+    <style>
+			body { margin: 0; }
+			canvas { width: 100%; height: 100% }
+		</style>
 </head>
 <body>
 
