--- a/index.html
+++ b/index.html
@@ -7,18 +7,21 @@
     <script src="./node_modules/es6-module-loader/dist/es6-module-loader.src.js"></script>
     <script src="./node_modules/systemjs/dist/system.src.js"></script>
     <script src="./config.js"></script>
+    <script src="./library/WOZLLA.js"></script>
+    <script src="./library/hammer.js"></script>
     <style>
 			body { margin: 0; }
 			canvas { width: 100%; height: 100% }
 		</style>
 </head>
 <body>
-
+<canvas id="main" width="800" height="800" style="background-color: #000000;"></canvas>
 </body>
 
 <script>
     //System.import('./Engine/Build/Test/ProfilerTest');
-    System.import('./Engine/Build/Test/main');
+    //System.import('./Engine/Build/Test/main');
     //System.import('./Engine/Build/Runtime/Framework/Trigger/Trigger');
+    System.import('./Engine/Build/Tester/ScollerRectTest');
 </script>
 </html>
