--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="./config.js"></script>
     <script src="./library/WOZLLA.js"></script>
     <script src="./library/hammer.js"></script>
+    <script src="./library/navmesh.js"></script>
     <style>
 			body { margin: 0; }
 			canvas { width: 100%; height: 100% }
@@ -20,8 +21,13 @@
 
 <script>
     //System.import('./Engine/Build/Test/ProfilerTest');
-    //System.import('./Engine/Build/Test/main');
+    System.import('./Engine/Build/Test/main');
     //System.import('./Engine/Build/Runtime/Framework/Trigger/Trigger');
-    System.import('./Engine/Build/Tester/ScollerRectTest');
+    //System.import('./Engine/Build/Tester/ScollerRectTest');
+    var App = {};
+    //System.import('./Engine/Build/Tester/MapTest');
+    //System.import('./Engine/Build/Tester/Flag');
+
+
 </script>
 </html>
