--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
 
 <script>
     //System.import('./Engine/Build/Test/ProfilerTest');
-    System.import('./Engine/Build/Test/main');
+    //System.import('./Engine/Build/Test/main');
     //System.import('./Engine/Build/Runtime/Framework/Trigger/Trigger');
     //System.import('./Engine/Build/Tester/ScollerRectTest');
     var App = {};
     //System.import('./Engine/Build/Tester/MapTest');
     //System.import('./Engine/Build/Tester/Flag');
 
-
+    System.import('./Engine/Build/Test/webglClient');
 </script>
 </html>
