--- a/Engine/Source/Test/Math/index.html
+++ b/Engine/Source/Test/Math/index.html
@@ -9,10 +9,11 @@
 
   <script src="/node_modules/es6-module-loader/dist/es6-module-loader.src.js"></script>
   <script src="/node_modules/systemjs/dist/system.src.js"></script>
-
+  <script src="/node_modules/mocha/mocha.js"></script>
+  <script src="/node_modules/chai/chai.js"></script>
+  <script src="/Engine/Build/Wasp.all.js"></script>
   <script>
-   System.import('./index');
-
+   System.import('./test');
   </script>
 </body>
 </html>
