--- a/test.html
+++ b/test.html
@@ -57,6 +57,7 @@ function launchFullScreen(element) {
 
     //System.import('./Engine/Build/Test/PerformanceTest');
     //System.import('./Engine/Build/Test/GestureTest');
-    System.import('./Engine/Build/Sample/WebGLBook/HelloPoint')
+   //System.import('./Engine/Build/Sample/WebGLBook/HelloPoint')
+   System.import('./Engine/Build/Sample/RxWorker/Test')
 </script>
 </html>
